syntax = "proto3";

option csharp_namespace = "AElf.Kernel.Types.Proposal";
import "google/protobuf/timestamp.proto";
import "common.proto";
import "kernel.proto";
message Authorization
{
    Address MultiSigAccount = 1;
    uint32 ExecutionThreshold = 2;
    uint32 ProposerThreshold = 3;
    repeated Reviewer Reviewers = 4;
}

message Reviewer
{
    bytes PubKey = 1;
    uint32 Weight = 2;
}

message Proposal {
    Address MultiSigAccount = 1;
    string Name = 2;
    PendingTxn TxnData = 3;
    google.protobuf.Timestamp ExpiredTime = 4;
    ProposalStatus Status = 5;
    Address Proposer = 6;
}

enum ProposalStatus {
    ToBeDecided = 0;
    Decided = 1;
    Released = 2;
}

message PendingTxn{
    string ProposalName = 1;
    bytes TxnData = 2;
}

message Approved {
    Hash ProposalHash = 1;
    repeated Approval Approvals = 5;
}

message Approval
{
    Hash ProposalHash = 1;
    Sig Signature = 2;
}